--- a/deepgram.toml
+++ b/deepgram.toml
@@ -4,9 +4,10 @@ description = "Get started using Deepgram's Text Intelligence with this Flask de
 author = "Deepgram DX Team <devrel@deepgram.com> (https://developers.deepgram.com)"
 repository = "https://github.com/deepgram-starters/flask-text-intelligence"
 useCase = "text-intelligence"
-language = "Python"
-framework = "Flask"
+language = "python"
+framework = "flask"
 sdk = "5.3.2"
+tags = ["text-intelligence", "text-analysis", "nlp", "natural-language-processing", "python", "flask"]
 
 # Check prerequisites
 [check]
