feat(deps): upgrade deepgram-sdk to v6.0.0-rc.1
Fern-generated SDK with unchanged API surface (listen.v1.media,
speak.v1.audio, read.v1.text). No code changes required.

--- a/deepgram.toml
+++ b/deepgram.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/deepgram-starters/flask-text-intelligence"
 useCase = "text-intelligence"
 language = "python"
 framework = "flask"
-sdk = "5.3.2"
+sdk = "6.0.0-rc.1"
 tags = ["text-intelligence", "text-analysis", "nlp", "natural-language-processing", "python", "flask"]
 
 # Check prerequisites
